<resources>
    <string name="app_name">Mis_Libros</string>
    <string name="insertar">Insertar</string>
    <string name="salir">Salir</string>
    <string name="titulo">Titulo</string>
    <string name="autor">Autor</string>
    <string name="resumen">Resumen</string>
    <string name="narrativa">narrativa</string>
    <string name="teatro">teatro</string>
    <string name="poesia">poesia</string>
    <string name="aceptar">aceptar</string>
    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="mensaje_no_seleccionado">Por favor,\n selecciona un libro</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
